--- a/tests/Serial.html
+++ b/tests/Serial.html
@@ -5,10 +5,12 @@
 	<title>Serial Calls</title>
 	<script type="application/javascript"             src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="application/javascript"             src="http://fgnass.github.io/spin.js/dist/spin.js"></script>
-	<script type="application/javascript;version=1.7" src="lib/flickr.js" ></script>
-	<script type="application/javascript;version=1.7" src="lib/spinner.js" ></script>
-	<script type="application/javascript;version=1.7" src="js/thread.js" ></script>
-	<script type="application/javascript;version=1.7" src="js/examples/JSONP.js" ></script>
+	<script type="application/javascript;version=1.7" src="../lib/debug.js" ></script>
+	<script type="application/javascript;version=1.7" src="../js/thread.js" ></script>
+	<script type="application/javascript;version=1.7" src="../js/examples/JSONP.js" ></script>
+	<script type="application/javascript;version=1.7" src="../lib/flickr.js" ></script>
+	<script type="application/javascript;version=1.7" src="../lib/spinner.js" ></script>
+
 
 </head>
 <body>
