--- a/tests/SimpleReturn.html
+++ b/tests/SimpleReturn.html
@@ -3,9 +3,9 @@
 <html>
 <head>
 	<script type="application/javascript"             src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script type="application/javascript;version=1.7" src="../lib/debug.js" ></script>
-	<script type="application/javascript;version=1.7" src="../js/thread.js" ></script>
-	<script type="application/javascript;version=1.7" src="../js/examples/JSONP.js" ></script>
+	<script type="application/javascript;version=1.7" src="lib/debug.js" ></script>
+	<script type="application/javascript;version=1.7" src="../thread.js" ></script>
+	<script type="application/javascript;version=1.7" src="../examples/JSONP.js" ></script>
 </head>
 <body>
 	<script type="application/javascript;version=1.7">
