--- a/tests/Parallel.html
+++ b/tests/Parallel.html
@@ -6,7 +6,7 @@
 	<script type="application/javascript"             src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="application/javascript"             src="http://fgnass.github.io/spin.js/dist/spin.js"></script>
 	<script type="application/javascript;version=1.7" src="lib/debug.js" ></script>
-	<script type="application/javascript;version=1.7" src="../thread.js" ></script>
+	<script type="application/javascript;version=1.7" src="../js/thread.js" ></script>
 	<script type="application/javascript;version=1.7" src="../examples/JSONP.js" ></script>
 	<script type="application/javascript;version=1.7" src="lib/flickr.js" ></script>
 	<script type="application/javascript;version=1.7" src="lib/spinner.js" ></script>
