start send()->next()

--- a/tests/AjaxInterrupt.html
+++ b/tests/AjaxInterrupt.html
@@ -2,17 +2,17 @@
 		"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<script type="application/javascript"             src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script type="application/javascript;version=1.7" src="lib/debug.js" ></script>
-	<script type="application/javascript;version=1.7" src="../js/thread.js" ></script>
-	<script type="application/javascript;version=1.7" src="../examples/JSONP.js" ></script>
+	<script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="application/javascript" src="lib/debug.js" ></script>
+	<script type="application/javascript" src="../js/thread.js" ></script>
+	<script type="application/javascript" src="../examples/JSONP.js" ></script>
 </head>
 <body>
-	<script type="application/javascript;version=1.7">
-		Thread.run(function(){
+	<script type="application/javascript">
+		Thread.run(function*(){
 
 			var NAME="AjaxInterrupt"
-			var a=Thread.run(function(){
+			var a=Thread.run(function*(){
 				try{
 					var data=yield (getJSON("http://api.flickr.com/services/feeds/photos_public.gne?tags=mozilla&format=json&jsoncallback=?"));
 					ERROR(NAME);
