--- a/tests/YieldInterrupt.html
+++ b/tests/YieldInterrupt.html
@@ -3,17 +3,17 @@
 <html>
 <head>
 	<script type="application/javascript"             src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script type="application/javascript;version=1.7" src="lib/debug.js" ></script>
-	<script type="application/javascript;version=1.7" src="../js/thread.js" ></script>
-	<script type="application/javascript;version=1.7" src="../examples/JSONP.js" ></script>
+	<script type="application/javascript" src="lib/debug.js" ></script>
+	<script type="application/javascript" src="../js/thread.js" ></script>
+	<script type="application/javascript" src="../examples/JSONP.js" ></script>
 </head>
 <body>
-	<script type="application/javascript;version=1.7">
-		Thread.run(function(){
+	<script type="application/javascript">
+		Thread.run(function*(){
 
 			var done={"done":"yes"};
 			var NAME="YieldInterrupt"
-			var b=Thread.run(function(){
+			var b=Thread.run(function*(){
 				try{
 					var t=0;
 					while(Thread.currentThread.keepRunning){
