--- a/tests/Parallel.html
+++ b/tests/Parallel.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<title>Many JSON Calls</title>
-	<script type="application/javascript"             src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script type="application/javascript"             src="http://fgnass.github.io/spin.js/dist/spin.js"></script>
+	<script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="application/javascript" src="lib/spin.js"></script>
 	<script type="application/javascript" src="lib/debug.js" ></script>
 	<script type="application/javascript" src="../js/thread.js" ></script>
 	<script type="application/javascript" src="../examples/JSONP.js" ></script>
