--- a/tests/SimpleReturn.html
+++ b/tests/SimpleReturn.html
@@ -2,7 +2,7 @@
 		"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<script type="application/javascript"             src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="application/javascript" src="lib/debug.js" ></script>
 	<script type="application/javascript" src="../js/thread.js" ></script>
 	<script type="application/javascript" src="../examples/JSONP.js" ></script>
@@ -14,7 +14,7 @@
 			var NAME="SimpleReturn";
 			var returnValue={"name":"return value"};
 
-			var a=new Thread(function(){
+			var a=new Thread(function*(){
 				yield (returnValue);
 			});
 			var response=a.start();
