--- a/tests/Serial.html
+++ b/tests/Serial.html
@@ -3,15 +3,13 @@
 <html>
 <head>
 	<title>Serial Calls</title>
-	<script type="application/javascript"             src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script type="application/javascript"             src="http://fgnass.github.io/spin.js/dist/spin.js"></script>
+	<script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="application/javascript" src="lib/spin.js"></script>
 	<script type="application/javascript" src="lib/debug.js" ></script>
 	<script type="application/javascript" src="../js/thread.js" ></script>
 	<script type="application/javascript" src="../examples/JSONP.js" ></script>
 	<script type="application/javascript" src="lib/flickr.js" ></script>
 	<script type="application/javascript" src="lib/spinner.js" ></script>
-
-
 </head>
 <body>
 	<h2>Call Flickr's public API for each tag, one at a time</h2>
