--- a/tests/AjaxInterrupt.html
+++ b/tests/AjaxInterrupt.html
@@ -1,47 +1,46 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-		"http://www.w3.org/TR/html4/loose.dtd">
+        "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script type="application/javascript" src="lib/debug.js" ></script>
-	<script type="application/javascript" src="../js/thread.js" ></script>
-	<script type="application/javascript" src="../examples/JSONP.js" ></script>
+    <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+    <script type="application/javascript" src="lib/debug.js"></script>
+    <script type="application/javascript" src="../js/thread.js"></script>
+    <script type="application/javascript" src="../examples/JSONP.js"></script>
 </head>
 <body>
-	<script type="application/javascript">
-		Thread.run(function*(){
+<script type="application/javascript">
+    Thread.run(function*() {
 
-			var NAME="AjaxInterrupt";
-			var a=Thread.run(function*(){
-				try{
-					var data=yield (getJSON("http://api.flickr.com/services/feeds/photos_public.gne?tags=mozilla&format=json&jsoncallback=?"));
-					ERROR(NAME);
-				}catch(e){
-					GOOD(NAME);
-					throw e;
-				}
-				ERROR(NAME);
-			});
+        var NAME = "AjaxInterrupt";
+        var a = Thread.run(function*() {
+            try {
+                var data = yield (getJSON("http://api.flickr.com/services/feeds/photos_public.gne?tags=mozilla&format=json&jsoncallback=?"));
+                ERROR(NAME);
+            } catch (e) {
+                GOOD(NAME);
+                throw e;
+            }
+            ERROR(NAME);
+        });
 
-			while(!a.currentRequest){
-				yield (Thread.sleep(50));
-			}
-			a.kill();
-
-
-			var result=yield (a.join());
-			if (result===undefined){
-				ERROR(NAME);
-			}else if (result.threadResponse instanceof Exception){
-				GOOD(NAME);
-			}else{
-				ERROR(NAME);
-			}//endif
-
-		});
+        while (!a.currentRequest) {
+            yield (Thread.sleep(50));
+        }
+        a.kill();
 
 
+        var result = yield (a.join());
+        if (result === undefined) {
+            ERROR(NAME);
+        } else if (result.threadResponse instanceof Exception) {
+            GOOD(NAME);
+        } else {
+            ERROR(NAME);
+        }//endif
 
-	</script>
+    });
+
+
+</script>
 </body>
 </html>
