--- a/tests/Parallel.html
+++ b/tests/Parallel.html
@@ -5,11 +5,11 @@
     <title>Many JSON Calls</title>
     <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="application/javascript" src="lib/spin.js"></script>
+    <script type="application/javascript" src="lib/spinner.js"></script>
     <script type="application/javascript" src="lib/debug.js"></script>
     <script type="application/javascript" src="../js/thread.js"></script>
     <script type="application/javascript" src="../examples/JSONP.js"></script>
     <script type="application/javascript" src="lib/flickr.js"></script>
-    <script type="application/javascript" src="lib/spinner.js"></script>
 
 </head>
 <body>
@@ -28,15 +28,14 @@
     var NUM_IMAGES = 5;
 
 
-    //WE WILL SPAWN MUTIPLE THREADS TO GET OUR PICTURES
+    //WE WILL SPAWN MULTIPLE THREADS TO GET OUR PICTURES
     var threads = [];
     for (var i = 0; i < tags.length; i++) {
-        threads[i] = Thread.run(function*() {
-            var static_i = i;
+        threads[i] = Thread.run((function*(static_i) {
             var url = URL.replace("{TAG}", tags[static_i]);
             var data = yield (getJSON(url));		//CALL OUR 'SYNCHRONOUS' FUNCTION
             displayImages(data, tags[static_i]);
-        });
+        })(i));
     }//for
 
     //ONE MORE THREAD THAT WILL NOTIFY WHEN DONE
@@ -47,7 +46,7 @@
         }//for
 
         //SINCE ALL THREADS ARE DONE, THIS IS ALWAYS THE LAST ROW
-        $("#images").append("<tr><td colspan='" + (NUM_IMAGES + 1) + "'>Done Images Loading</td></tr>");
+        $("#images tbody").append("<tr><td colspan='" + (NUM_IMAGES + 1) + "'>Done Images Loading</td></tr>");
     });
 
 
