--- a/tests/JoinWithError.html
+++ b/tests/JoinWithError.html
@@ -1,33 +1,33 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+	"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="application/javascript" src="lib/debug.js"></script>
-    <script type="application/javascript" src="../js/thread.js"></script>
-    <script type="application/javascript" src="../examples/JSONP.js"></script>
+	<script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="application/javascript" src="lib/debug.js"></script>
+	<script type="application/javascript" src="../js/thread.js"></script>
+	<script type="application/javascript" src="../examples/JSONP.js"></script>
 </head>
 <body>
 <script type="application/javascript">
-    Thread.run(function*() {
+Thread.run(function*(){
 
-        var NAME = "JoinWithError"
-        var a = Thread.run(function*() {
-            throw new Exception("problem");
-            yield (null);
-        });
+	var NAME = "JoinWithError";
+	var a = Thread.run(function*(){
+		throw new Exception("problem");
+		yield (null);
+	});
 
-        try {
-            var result = yield (a.join());
-            if (result.threadResponse instanceof Exception) {
-                GOOD(NAME);
-            } else {
-                ERROR(NAME);
-            }//endif
-        } catch (e) {
-            ERROR(NAME);
-        }//try
-    });
+	try {
+		var result = yield (a.join());
+		ERROR(NAME);
+	} catch (e) {
+		if (e.message == "problem") {
+			GOOD(NAME);
+		} else {
+			ERROR(NAME);
+		}//endif
+	}//try
+});
 
 </script>
 </body>
