--- a/tests/SimpleReturn.html
+++ b/tests/SimpleReturn.html
@@ -19,7 +19,7 @@
         });
         var response = a.start();
 
-        if (response.threadResponse != returnValue) {
+        if (response != returnValue) {
             ERROR(NAME);
         } else {
             GOOD(NAME);
