--- a/tests/TightLoop.html
+++ b/tests/TightLoop.html
@@ -19,7 +19,7 @@
 <div id="message"></div>
 
 <div>
-    Spinner to show no real blocking:
+    Spinner to show insignificant blocking:
     <div id="spinner"></div>
 </div>
 
