--- a/tests/Serial.html
+++ b/tests/Serial.html
@@ -15,7 +15,7 @@
 <h2>Call Flickr's public API for each tag, one at a time</h2>
 
 <div>
-    Spinner to show no real blocking:
+    Spinner to show insignificant blocking:
     <div id="spinner"></div>
 </div>
 
