more fixes, more tests

--- a/tests/JoinAny.html
+++ b/tests/JoinAny.html
@@ -16,7 +16,7 @@
 <h2>Call Flickr's public API from multiple threads, show fastest response only</h2>
 
 <div>
-    Spinner to show insignificant blocking:
+    Spinner to show blocking:
     <div id="spinner"></div>
 </div>
 <table id="images"></table>
