--- a/tests/Parallel.html
+++ b/tests/Parallel.html
@@ -31,7 +31,7 @@
     //WE WILL SPAWN MULTIPLE THREADS TO GET OUR PICTURES
     var threads = [];
     for (var i = 0; i < tags.length; i++) {
-        threads[i] = Thread.run((function*(static_i) {
+        threads[i] = Thread.run("#"+i, (function*(static_i) {
             var url = URL.replace("{TAG}", tags[static_i]);
             var data = yield (getJSON(url));		//CALL OUR 'SYNCHRONOUS' FUNCTION
             displayImages(data, tags[static_i]);
@@ -39,7 +39,7 @@
     }//for
 
     //ONE MORE THREAD THAT WILL NOTIFY WHEN DONE
-    Thread.run(function*() {
+    Thread.run("main", function*() {
         //WAIT FOR ALL THREADS TO GET THEIR DATA, AND SHOW THEIR WORK
         for (var j = threads.length; j--;) {
             yield Thread.join(threads[j]);
